# Calculator_tauri

./: .gitignore  README.md  package.json
src/: App.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
